nginx-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: order-deployment
  labels:
    app: orderlabel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderlabel
  template:
    metadata:
      labels:
        app: orderlabel
    spec:
      containers:
      - name: orderlabel
        image: nginx:1.14.2
        ports:
        - containerPort: 80
