nginx-test/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginxlabel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
