nginx-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: orderlabel
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 80
